<resources>
    <string name="app_name">MeshMessager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="service_switch_start">Start Mesh</string>
    <string name="service_switch_stop">Stop Mesh</string>
    <string name="mode_both">Both</string>
    <string name="mode_scan">Scan Only</string>
    <string name="mode_advertise">Advertise Only</string>

    <string name="view_logs">View Logs</string>

    <!-- WelcomeFragment -->
    <string name="user_alias_hint">My Name</string>
    <string name="choose_a_name">Please enter your name</string>
    <string name="choose_your_interest">Choose Your Interest</string>

    <!-- user_item -->
    <string name="user_alias">%1$s (%2$s)</string>
    <string name="user_info">%1$d hop(s), max rssi: %2$d</string>
    <string name="user_list">User_List</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="peer_status_offline">This user is offline now</string>


    <!-- message fragment-->
    <string name="send">Send</string>
    <string name="message_entry_hint">Enter Your Message</string>

    <!-- drawer menu-->
    <string name="ble_mesh_switcher">BLE-Mesh Switcher</string>
    <string name="bt_on">Bluetooth On</string>
    <string name="bt_off">Bluetooth Off</string>
    <string name="bluetooth_switcher">Bluetooth Switcher</string>
    <string name="change_name">Change Name</string>
    <string name="change_interest">Change Interest</string>
    <string name="profile_setting">Profile Setting</string>
    <string name="share">Share</string>
    <string name="last_message">last_message is : …</string>


</resources>
