<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/profile_setting">
        <menu>
            <item
                android:id="@+id/changeName"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/change_name" />
            <item
                android:id="@+id/changeInfo"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/change_interest" />
        </menu>
    </item>
    <item android:title="@string/bluetooth_switcher">
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/btOn"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/bt_on" />
            <item
                android:id="@+id/btOff"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/bt_off" />
        </group>
    </item>
    <item android:title="@string/ble_mesh_switcher">

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/mesh_start"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/service_switch_start" />
            <item
                android:id="@+id/mesh_stop"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/service_switch_stop" />
        </group>
    </item>
</menu>
